Refactor XML validation process by removing pre-validation steps and adding basic structural validation for EntityTypes